Fix: Corregir carga de FullCalendar y estructura JS con defer

--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
     <!-- Incluir librería Supabase JS (CDN) -->
     <!-- Dentro del <head> de index.html -->
 
-    <link rel="stylesheet" href="style.css"> <!-- Tu CSS existente -->
-<!-- ESTILOS para FullCalendar -->
-    <link href='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/main.min.css' rel='stylesheet' />
 <!-- FUNCIONALIDAD de FullCalendar -->
-    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/main.min.js'></script>
-<!-- OPCIONAL: Paquete de idioma español para FullCalendar -->
-    <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/core/locales/es.js'></script>
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js'></script>
+<!-- OPCIONAL: Paquete de idioma español para FullCalendar <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/core/locales/es.js'></script> --> 
 <!-- Librería Supabase (ya debería estar) -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
@@ -65,13 +61,6 @@
     </footer>
 
     <script src="script.js"></script>
-            <!-- ... tu código HTML existente ... -->
-        </main>
-        <footer>
-            <p>Quicap AI Innovations</p>
-        </footer>
-
-        <script src="script.js"></script> <!-- Tu script principal -->
 
         <!-- Incluir las librerías para ics.js que descargaste -->
         <script src="ics.deps.min.js"></script> <!-- Primero las dependencias -->
@@ -79,5 +68,3 @@
 
     </body>
     </html>
-</body>
-</html>
