Añadida exportación a Google Calendar y cambio en la UX

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
-    <header>
-        <h1>Medusa Reactor Programming</h1> 
-        <p class="subtitle">Quicap AI Innovations</p>
+    <header class="site-header"> 
+        <img src="images/logo.jpeg" alt="Logo Quicap AI Innovations" id="header-logo"> 
+        <div class="header-text"> 
+            <h1>Medusa Reactor Programming</h1>
+            <p class="subtitle">Quicap AI Innovations</p>
+        </div>
     </header>
     <main>
     <section class="card">
